--- a/FL13_HW1/homework/index.html
+++ b/FL13_HW1/homework/index.html
@@ -29,7 +29,7 @@
           <hr>
           <main>
 
-            <article id="home">
+            <article id="home" aria-label="Article">
               <p>
                 <b>Fructose</b>, or
                 <b>fruit sugar,</b> is a simple
@@ -54,7 +54,7 @@
 
             <hr>
 
-            <section id="heading">
+            <section id="heading" aria-label="Heading">
               <p>h1 defines the most important heading. h6 defines the least important heading. Font-size for h1 is the same as font-size for h2, because we have to use only one h1 on the page, and it is commonly used inside header</p>
               <h2>Heading 2</h2>
               <h3>Heading 3</h3>
@@ -65,7 +65,7 @@
 
             <hr>
 
-            <section id="table">
+            <section id="table" aria-label="Table">
               <h2>Sugar content of selected common plant foods (g/100g)</h2>
               <table>
                   <thead>
@@ -102,7 +102,7 @@
 
             <hr>
 
-            <section id="types-of-list">
+            <section id="types-of-list" aria-label="List types">
               <h3>Unordered Shopping List</h3>
               <ul>
                 <li>
@@ -156,7 +156,7 @@
 
             <hr>
 
-            <section id="text-formats">
+            <section id="text-formats" aria-label="Text formats">
               <h2>Text formats</h2>
 
               <h3>Preformatted Text</h3>
@@ -194,7 +194,7 @@ both           <b>spaces</b> and
 
             <hr>
             
-            <section id="registration">
+            <section id="registration" aria-label="Registration">
               <form action="#">
                 <fieldset>
                   <p>
