fixed some styles

--- a/FL13_HW13/homework/index.html
+++ b/FL13_HW13/homework/index.html
@@ -88,23 +88,35 @@
         </div>
 
         <div class="all-games row d-flex justify-content-between">
-          <div class="all-games__item col-xl-6">
+          <div class="all-games__item col-xl-6 text-center">
             <img src="assets/7.jpg" alt="game img" class="all-games__img img-fluid">
+            <h5 class="all-games__heading">Card-title</h5>
+            <p class="all-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
           </div>
-          <div class="all-games__item col-xl-6">
+          <div class="all-games__item col-xl-6 text-center">
             <img src="assets/8.jpg" alt="game img" class="all-games__img img-fluid">
+            <h5 class="all-games__heading">Card-title</h5>
+            <p class="all-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
           </div>
-          <div class="all-games__item col-xl-6">
+          <div class="all-games__item col-xl-6 text-center">
             <img src="assets/9.jpg" alt="game img" class="all-games__img img-fluid">
+            <h5 class="all-games__heading">Card-title</h5>
+            <p class="all-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
           </div>
-          <div class="all-games__item col-xl-6">
+          <div class="all-games__item col-xl-6 text-center">
             <img src="assets/10.jpg" alt="game img" class="all-games__img img-fluid">
+            <h5 class="all-games__heading">Card-title</h5>
+            <p class="all-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
           </div>
-          <div class="all-games__item col-xl-6">
+          <div class="all-games__item col-xl-6 text-center">
             <img src="assets/11.jpg" alt="game img" class="all-games__img img-fluid">
+            <h5 class="all-games__heading">Card-title</h5>
+            <p class="all-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
           </div>
-          <div class="all-games__item col-xl-6">
+          <div class="all-games__item col-xl-6 text-center">
             <img src="assets/12.jpg" alt="game img" class="all-games__img img-fluid">
+            <h5 class="all-games__heading">Card-title</h5>
+            <p class="all-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
           </div>
         </div>
 
@@ -112,7 +124,21 @@
     </section>
 
     <footer class="main-footer">
-      <div class="container"></div>
+      <div class="container d-flex justify-content-between">
+        <div class="row">
+          <div class="main-footer__info col-xl-6">
+            <h4>Subscribe</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam debitis nam nesciunt illo.</p>
+          </div>
+          <form action="#" class="main-footer__form col-xl-6">
+            <input type="text" placeholder="Email Address">
+            <input type="submit" value="Subscribe" class="submit-btn">
+          </form>
+          <div class="main-footer_copy text-center col-12">
+            &copy; 2020 Front-end Lab
+          </div>
+        </div>   
+      </div>
     </footer>
 
   </body>
