--- a/FL13_HW13/homework/index.html
+++ b/FL13_HW13/homework/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="zxx">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -12,29 +12,37 @@
   <body>
     
     <header class="main-header">
-      <div class="container d-flex justify-content-between">
-        <h2 class="main-header__logo col-xl-2">Games</h2>
-        <nav class="main-header__menu col-xl-8 d-flex justify-content-center align-items-center">
-          <a href="#" class="main-header__link">Home</a>
-          <a href="#" class="main-header__link">Features</a>
-          <a href="#" class="main-header__link">Pricing</a>
-          <a href="#" class="main-header__link">Disabled</a>
-        </nav>
-        <a href="#" class="main-header__button col-xl-2 text-center d-flex justify-content-center align-items-center">Push to Start</a>
+      <div class="container d-flex justify-content-between main-header__container">
+          <h2 class="main-header__logo col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">Games</h2>
+          <div class="main-header__burger col-xl-8 col-lg-8 col-md-7 col-sm-12 col-12">
+            <input id="menu__toggle" type="checkbox" class="d-flex d-md-none" />
+            <label class="menu__btn d-flex d-md-none" for="menu__toggle">
+              <span></span>
+            </label>
+            <nav id="main_menu" class="main-header__menu d-none d-md-flex  justify-content-center align-items-center">
+              <a href="#" class="main-header__link">Home</a>
+              <a href="#" class="main-header__link">Features</a>
+              <a href="#" class="main-header__link">Pricing</a>
+              <a href="#" class="main-header__link">Disabled</a>
+            </nav>
+          </div>
+          <a href="#" class="main-header__button col-xl-2 col-lg-2 col-md-3 text-center d-md-flex d-none justify-content-center align-items-center">Push to Start</a> 
       </div>
     </header>
 
     <section class="hero-section">
       <div class="container d-flex justify-content-between">
-        <div class="hero-section__info col-xl-5 d-flex flex-column justify-content-center">
-          <h1 class="hero-section__heading">Front-end Lab <br>CSS-Frameworks</h1>
-          <p class="hero-section__text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora molestiae obcaecati odit eligendi voluptate doloremque, ipsam consequatur amet incidunt excepturi praesentium quia, eius fuga maiores odio, inventore.
-          </p>
-          <a href="#" class="hero-section__button text-center">Find Out More</a>
-        </div>
-        <div class="hero-section__img col-xl-7">
-          <img src="assets/hero-5.jpg" alt="hero-img" class="img-fluid">
+        <div class="row">
+          <div class="hero-section__info col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 d-flex flex-column justify-content-center order-2 order-md-1">
+            <h1 class="hero-section__heading">Front-end Lab <br>CSS-Frameworks</h1>
+            <p class="hero-section__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora molestiae obcaecati odit eligendi voluptate doloremque, ipsam consequatur amet incidunt excepturi praesentium quia, eius fuga maiores odio, inventore.
+            </p>
+            <a href="#" class="hero-section__button text-center">Find Out More</a>
+          </div>
+          <div class="hero-section__img col-xl-7 col-lg-7 col-md-7 col-sm-12 col-12 order-1 order-md-2">
+            <img src="assets/hero-5.jpg" alt="hero-img" class="img-fluid">
+          </div>
         </div>
       </div>
     </section>
@@ -46,32 +54,32 @@
           <p class="section-header__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ipsa repellendus quidem magnam placeat cum doloribus aspernatur.</p>
         </div>
         <div class="row best-games d-flex justify-content-between">
-          <div class="best-games__item text-center col-xl-4">
+          <div class="best-games__item text-center col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <img src="assets/1.jpg" alt="game img" class="best-games__img img-fluid">
             <h5 class="best-games__heading">Card-title</h5>
             <p class="best-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas modi sunt odio perferendis?</p>
           </div>
-          <div class="best-games__item text-center col-xl-4">
+          <div class="best-games__item text-center col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <img src="assets/2.jpg" alt="game img" class="best-games__img img-fluid">
             <h5 class="best-games__heading">Card-title</h5>
             <p class="best-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam aspernatur obcaecati voluptatem repudiandae.</p>
           </div>
-          <div class="best-games__item text-center col-xl-4">
+          <div class="best-games__item text-center col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <img src="assets/3.jpg" alt="game img" class="best-games__img img-fluid">
             <h5 class="best-games__heading">Card-title</h5>
             <p class="best-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum minima sit vero, ab.</p>
           </div>
-          <div class="best-games__item text-center col-xl-4">
+          <div class="best-games__item text-center col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <img src="assets/4.jpg" alt="game img" class="best-games__img img-fluid">
             <h5 class="best-games__heading">Card-title</h5>
             <p class="best-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus assumenda nobis maxime, aspernatur.</p>
           </div>
-          <div class="best-games__item text-center col-xl-4">
+          <div class="best-games__item text-center col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <img src="assets/5.jpg" alt="game img" class="best-games__img img-fluid">
             <h5 class="best-games__heading">Card-title</h5>
             <p class="best-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum possimus quidem saepe, fugit!</p>
           </div>
-          <div class="best-games__item text-center col-xl-4">
+          <div class="best-games__item text-center col-xl-4 col-lg-4 col-md-4 col-sm-6">
             <img src="assets/6.jpg" alt="game img" class="best-games__img img-fluid">
             <h5 class="best-games__heading">Card-title</h5>
             <p class="best-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
@@ -88,55 +96,35 @@
         </div>
 
         <div class="all-games row d-flex justify-content-between">
-<<<<<<< HEAD
-          <div class="all-games__item col-xl-6 text-center">
+          <div class="all-games__item col-xl-6 col-lg-6 col-md-6 text-center">
             <img src="assets/7.jpg" alt="game img" class="all-games__img img-fluid">
             <h5 class="all-games__heading">Card-title</h5>
             <p class="all-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
           </div>
-          <div class="all-games__item col-xl-6 text-center">
+          <div class="all-games__item col-xl-6 col-lg-6 col-md-6 text-center">
             <img src="assets/8.jpg" alt="game img" class="all-games__img img-fluid">
             <h5 class="all-games__heading">Card-title</h5>
             <p class="all-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
           </div>
-          <div class="all-games__item col-xl-6 text-center">
+          <div class="all-games__item col-xl-6 col-lg-6 col-md-6 text-center">
             <img src="assets/9.jpg" alt="game img" class="all-games__img img-fluid">
             <h5 class="all-games__heading">Card-title</h5>
             <p class="all-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
           </div>
-          <div class="all-games__item col-xl-6 text-center">
+          <div class="all-games__item col-xl-6 col-lg-6 col-md-6 text-center">
             <img src="assets/10.jpg" alt="game img" class="all-games__img img-fluid">
             <h5 class="all-games__heading">Card-title</h5>
             <p class="all-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
           </div>
-          <div class="all-games__item col-xl-6 text-center">
+          <div class="all-games__item col-xl-6 col-lg-6 col-md-6 text-center">
             <img src="assets/11.jpg" alt="game img" class="all-games__img img-fluid">
             <h5 class="all-games__heading">Card-title</h5>
             <p class="all-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
           </div>
-          <div class="all-games__item col-xl-6 text-center">
+          <div class="all-games__item col-xl-6 col-lg-6 col-md-6 text-center">
             <img src="assets/12.jpg" alt="game img" class="all-games__img img-fluid">
             <h5 class="all-games__heading">Card-title</h5>
             <p class="all-games__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, tempora a eius eligendi!</p>
-=======
-          <div class="all-games__item col-xl-6">
-            <img src="assets/7.jpg" alt="game img" class="all-games__img img-fluid">
-          </div>
-          <div class="all-games__item col-xl-6">
-            <img src="assets/8.jpg" alt="game img" class="all-games__img img-fluid">
-          </div>
-          <div class="all-games__item col-xl-6">
-            <img src="assets/9.jpg" alt="game img" class="all-games__img img-fluid">
-          </div>
-          <div class="all-games__item col-xl-6">
-            <img src="assets/10.jpg" alt="game img" class="all-games__img img-fluid">
-          </div>
-          <div class="all-games__item col-xl-6">
-            <img src="assets/11.jpg" alt="game img" class="all-games__img img-fluid">
-          </div>
-          <div class="all-games__item col-xl-6">
-            <img src="assets/12.jpg" alt="game img" class="all-games__img img-fluid">
->>>>>>> 387409edd947cd1faf1f8cdd3dfb07983c4e3879
           </div>
         </div>
 
@@ -144,14 +132,13 @@
     </section>
 
     <footer class="main-footer">
-<<<<<<< HEAD
       <div class="container d-flex justify-content-between">
         <div class="row">
-          <div class="main-footer__info col-xl-6">
+          <div class="main-footer__info col-xl-6 col-lg-6 col-md-6">
             <h4>Subscribe</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam debitis nam nesciunt illo.</p>
           </div>
-          <form action="#" class="main-footer__form col-xl-6">
+          <form action="#" class="main-footer__form col-xl-6 col-lg-6 col-md-6">
             <input type="text" placeholder="Email Address">
             <input type="submit" value="Subscribe" class="submit-btn">
           </form>
@@ -160,9 +147,6 @@
           </div>
         </div>   
       </div>
-=======
-      <div class="container"></div>
->>>>>>> 387409edd947cd1faf1f8cdd3dfb07983c4e3879
     </footer>
 
   </body>
